[gd_scene load_steps=4 format=2]

[ext_resource path="res://img Pokemon/img Overlay/TableauJadielleHouse1/BG.png" type="Texture" id=1]
[ext_resource path="res://img Pokemon/img Overlay/TableauJadielleHouse1/arrow.png" type="Texture" id=2]
[ext_resource path="res://GUI/Overlay/PopupTableauJadielleHouse1.gd" type="Script" id=3]

[node name="PopupTableau" type="Popup"]
pause_mode = 2
popup_exclusive = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="."]
margin_left = 306.048
margin_top = 40.2106
margin_right = 976.048
margin_bottom = 205.211
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow1" type="TextureRect" parent="."]
margin_left = 335.0
margin_top = 78.0
margin_right = 360.0
margin_bottom = 114.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow2" type="TextureRect" parent="."]
margin_left = 529.0
margin_top = 78.0
margin_right = 554.0
margin_bottom = 114.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow3" type="TextureRect" parent="."]
margin_left = 725.0
margin_top = 78.0
margin_right = 750.0
margin_bottom = 118.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow4" type="TextureRect" parent="."]
margin_left = 335.0
margin_top = 135.0
margin_right = 360.0
margin_bottom = 171.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow5" type="TextureRect" parent="."]
margin_left = 529.0
margin_top = 135.0
margin_right = 554.0
margin_bottom = 171.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow6" type="TextureRect" parent="."]
margin_left = 725.0
margin_top = 135.0
margin_right = 750.0
margin_bottom = 171.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
